Fixed invisible header issue

--- a/links/main.css
+++ b/links/main.css
@@ -30,8 +30,9 @@ t.lietal t:first-child { text-transform: capitalize; }
 #hd > info b { font-weight: normal; font-family: 'archivo_bold' }
 #hd > info a:hover { text-decoration: underline; }
 #hd > div { position: fixed;top:60px;left:530px }
-#hd.no_photo > a,#hd.noir > a { -webkit-filter: invert(0%);filter: invert(0%); }
+#hd.no_photo #logo,#hd.noir #logo { -webkit-filter: invert(0%);filter: invert(0%); }
 #hd.no_photo photo { opacity: 0; height:0px; }
+#hd.no_photo #search { border-bottom-color: black; color:black; }
 #hd.blanc photo { opacity: 1 }
 
 #sd { padding: 20px 30px 60px 30px;width: 240px;float: left;position: relative;height: 100%;border-right: 1.5px solid white;}
